--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,11 @@
             <version>6.11</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>xuzw-maven-repo</id>
+            <url>https://raw.githubusercontent.com/xuzw/maven-repo/master/repository</url>
+        </repository>
+    </repositories>
 </project>
